# gstplayer

./: .gitignore  README.md
common/: gstplayer.c  tracks.h
fluendo/: makeARMV7.sh
fluendo/armv7/: libgstflumpegdemux.so_gstreamer0.10
gst-0.10/: gst-backend.c
gst-ifdsrc/: doall.sh  makeARMV5T.sh  makeARMV7.sh  makeI686.sh  makeMIPSEL.sh  makeSH4.sh  makeSH4_old.sh
gst-ifdsrc/gst-ifdsrc/: configure.ac
gst-ifdsrc/gst-ifdsrc/src/: gstifdsrc.c
gst-ifdsrc/tmp/: AUTHORS  Makefile  configure.ac
gst-ifdsrc/tmp/src/: Makefile  Makefile.am  gstifdsrc.c  gstifdsrc.h  gstplugin.c  libgstifdsrc.la  libgstifdsrc_la-gstifdsrc.lo
gst-ifdsrc/tmp/src/.deps/: libgstifdsrc_la-gstifdsrc.Plo
gst-ifdsrc/tmp/src/.libs/: libgstifdsrc.la  libgstifdsrc.lai
gstplayer/: doall.sh
gstplayer/common/: gst-backend.h  gstplayer.c  tracks.h
gstplayer/gst-0.10/: gst-backend.c  makeARMV7.sh  makeI686.sh  makeMIPSEL.sh  makeSH4.sh
gstplayer/gst-0.10/armv7/: gstplayer_gstreamer0.10
gstplayer/gst-0.10/i686/: gstplayer_gstreamer0.10
gstplayer/gst-0.10/mipsel/: gstplayer_gstreamer0.10
gstplayer/gst-1.0/: Makefile.am  gst-backend.c  makeARMV5T.sh  makeARMV7.sh  makeI686.sh  makeMIPSEL.sh  makeSH4.sh
gstplayer/gst-1.0/i686/: gstplayer_gstreamer1.0
gstplayer/gst-1.0/mipsel/: gstplayer_gstreamer1.0
gstplayer/gst-1.0/sh4/: gstplayer_gstreamer1.0
gstplayer/tmp/i686/: gstplayer_gstreamer1.0  (+1 more)
iptvsubparser/: doall.sh  make.sh
iptvsubparser/src/: subparsermodule.c
lsdir/: doall.sh  make.sh
lsdir/src/: lsdir.c
platformtester/: make.sh
platformtester/src/: platformtester.c
uchardet/: doall.sh  git.txt  makeARMV5T.sh  makeARMV7.sh  makeI686.sh  makeMIPSEL.sh  makeSH4.sh
uchardet/src/: CMakeCache.txt  CMakeLists.txt  LangPolishModel.cpp  nsSBCSGroupProber.cpp  nsSBCSGroupProber.h  nsSBCharSetProber.h  prcpucfg.h  prcpucfg_linux.h
uchardet/testdata/: fetchlangwikis  runtest
(+15 files in other folders)
